test/negative/BadVoid2.java
public class BadVoid2 {
    public BadVoid2(void x) {
    }
}
